2009-10-04  Graham Cobb  <g+770@cobb.uk.net>

	* todo-ui.c (edit_item): Use GtkComboBox for priority and state

	* list-ui.c (create_app_menu): Create Fremantle menu
	(delete_completed_items): Correct parent window for dialog

2009-09-14  Graham Cobb  <g+770@cobb.uk.net>

	* list-ui.c (create_app_menu): Remove View menu and Toolbar and Fullscreen
	options for Fremantle

2009-09-13  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: set up MAEMO5 condition for automake

	* hildon/Makefile.am (gpe-todo.png): Conditionalise application icon size

2009-09-09  Graham Cobb  <g+770@cobb.uk.net>

	* list-ui.c: Port category menu to Fremantle hildon selector and add checkbox
	for Completed Items display

	* configure.ac: Add check for maemo-version

2009-09-02  Graham Cobb  <g+770@cobb.uk.net>

	* list-ui.c (top_level): Use stock icons for toolbar to simplify Fremantle porting

2009-02-04  Lars Persson Fink  <lars.p.fink@gmail.com>

	* list-ui.c: Remembers selected category between sessions. Fixes
	#261. Add support for hiding status and color column.

2008-12-07  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (open_window): Change application name to GPE To-do

	* debian/rules: Add configuration and clean sections

	* debian/postinst: Add postinst script to rebuild hildon icon cache

	* hildon/gpe-todo.desktop.in.in (_Name): Change name to GPE To-do

	* configure.ac: Add hildon/Makefile to AC_OUTPUT

	* hildon/*.png: Add icons for 26x26, 40x40 and 64x64.  
	Rename gpe-todo.png to gpe-todo-48x48.png

	* hildon/Makefile.am: Create separate Makefile to generate various icons for hildon

	* Makefile.am: Move hildon/ stuff into separate Makefile and add hildon to subdirs

2008-10-22  Persson Fink, Lars  <lars.p.fink@gmail.com>

	* po/gpe-todo.pot: Regenerated.

	* po/sv.po: Updated accordingly.

	* list-ui.c (item_do_delete): Added warning dialog if no item is
	selected.
	(show_info_dialog): Added message parameter and renamed from
	show_no_item_selected_dialog.